--- a/.github/workflows/lint_and_pytest_check.yml
+++ b/.github/workflows/lint_and_pytest_check.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
-          make install
+          make build
