--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,13 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.28.1"
-pytest = "^7.1.3"
+
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
 requests-mock = "^1.10.0"
-
+pytest-cov = "^3.0.0"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
