--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ packages = [
 python = "^3.10"
 requests = "^2.28.1"
 
-
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
 requests-mock = "^1.10.0"
 pytest-cov = "^3.0.0"
 pytest = "^7.1.3"
+furl = "^2.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
