--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest-cov = "^3.0.0"
 pytest = "^7.1.3"
 furl = "^2.1.3"
 beautifulsoup4 = "^4.11.1"
+progress = "^1.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
