--- a/.github/workflows/lint_and_pytest_check.yml
+++ b/.github/workflows/lint_and_pytest_check.yml
@@ -19,6 +19,7 @@ jobs:
           make install
       - name: Run tests and lint
         run: |
+            make pyt
             make lint
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v2.7.4
