--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^7.1.3"
 furl = "^2.1.3"
 beautifulsoup4 = "^4.11.1"
 progress = "^1.6"
+tap = "^0.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
