--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ requests-mock = "^1.10.0"
 pytest-cov = "^3.0.0"
 pytest = "^7.1.3"
 
+[tool.poetry.group.dev.dependencies]
+loguru = "^0.6.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
